--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,9 @@
 
     <string name="action_settings">Settings</string>
     <string name="gps_coord">0</string>
+    <string name="service_not_available">\"\"</string>
+    <string name="invalid_lat_long_used">\"\"</string>
+    <string name="no_address_found">\"\"</string>
+    <string name="address_found">\"\"</string>
+    <string name="no_geocoder_available">\"\"</string>
 </resources>
