--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <string name="no_address_found">\"\"</string>
     <string name="address_found">\"\"</string>
     <string name="no_geocoder_available">\"\"</string>
+    <string name="title_activity_maps">Map</string>
+    <string name="android_studio">Android Studio</string>
+    <string name="android_studio_android_com">android.studio@android.com</string>
+    <string name="the_icon_image">The_Icon_Image</string>
 </resources>
