Added a mapsActivity. When you click Map View, it will take you to a google maps fragment. To get back to the main Activity, you need to hit the back button on the android device.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="no_address_found">\"\"</string>
     <string name="address_found">\"\"</string>
     <string name="no_geocoder_available">\"\"</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
