Start Screen Activity -Adds the "start Screen" where the user sets their name.   -Connectitvity to the main page is set up.   -Saving name to internal device memory will come next update.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,6 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
+    <string name="str_UserName"></string>
+    <string name="str_Enterbtn">Enter</string>
 </resources>
